--- a/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
+++ b/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <ClInclude Include="inc\debug.h" />
     <ClInclude Include="inc\driver.h" />
+    <ClInclude Include="inc\imu.h" />
     <ClInclude Include="inc\motor.h" />
     <ClInclude Include="inc\parameters.h" />
     <ClInclude Include="inc\status.h" />
