--- a/software/sensors-and-motors/lib-driver/lib-driver.vcxproj.filters
+++ b/software/sensors-and-motors/lib-driver/lib-driver.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="inc\debug.h">
       <Filter>inc</Filter>
     </ClInclude>
+    <ClInclude Include="inc\imu.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\dummy.c">
