--- a/software/sensors-and-motors/lib-stm32/lib-stm32.vcxproj
+++ b/software/sensors-and-motors/lib-stm32/lib-stm32.vcxproj
@@ -66,12 +66,14 @@
     <ClInclude Include="src\stm32l4xx.h" />
     <ClInclude Include="src\system_stm32l4xx.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_bus.h" />
+    <ClInclude Include="stm32\stm32l4xx_ll_dma.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_exti.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_gpio.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_lptim.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_lpuart.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_pwr.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_rcc.h" />
+    <ClInclude Include="stm32\stm32l4xx_ll_spi.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_system.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_tim.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_usart.h" />
@@ -79,7 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\startup_stm32l496xx.s" />
+    <ClCompile Include="src\stm32l4xx_ll_utils.c" />
     <ClCompile Include="src\system_stm32l4xx.c" />
-    <ClCompile Include="stm32\stm32l4xx_ll_utils.c" />
   </ItemGroup>
 </Project>
