--- a/software/sensors-and-motors/lib-stm32/lib-stm32.vcxproj
+++ b/software/sensors-and-motors/lib-stm32/lib-stm32.vcxproj
@@ -65,6 +65,7 @@
     <ClInclude Include="src\stm32l496xx.h" />
     <ClInclude Include="src\stm32l4xx.h" />
     <ClInclude Include="src\system_stm32l4xx.h" />
+    <ClInclude Include="stm32\stm32l4xx_ll_adc.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_bus.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_dma.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_exti.h" />
