--- a/software/sensors-and-motors/lib-stm32/lib-stm32.vcxproj.filters
+++ b/software/sensors-and-motors/lib-stm32/lib-stm32.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="stm32\stm32l4xx_ll_dma.h">
       <Filter>stm32</Filter>
     </ClInclude>
+    <ClInclude Include="stm32\stm32l4xx_ll_adc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\startup_stm32l496xx.s">
