- added async tasks framework - migrated IMU/LineSensor to use task framework (return sampling frequency, still need to calculate actual values)

--- a/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
+++ b/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
@@ -62,6 +62,7 @@
     <ClInclude Include="inc\motor_controller.h" />
     <ClInclude Include="inc\parameters.h" />
     <ClInclude Include="inc\status.h" />
+    <ClInclude Include="inc\tasks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
@@ -73,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\clock.c" />
+    <ClCompile Include="src\tasks.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
