- added code to meazure timing of interrupts, etc. - added code to call IMU/LineSensor start query - added MIN function - SPI now remembers which pin it needs to disable on completion

--- a/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
+++ b/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="src\status.c" />
     <ClCompile Include="src\system_clock.c" />
     <ClCompile Include="src\timers.c" />
+    <ClCompile Include="src\timing.c" />
     <ClCompile Include="src\usart.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
