--- a/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
+++ b/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
@@ -63,6 +63,7 @@
     <ClInclude Include="inc\parameters.h" />
     <ClInclude Include="inc\status.h" />
     <ClInclude Include="inc\tasks.h" />
+    <ClInclude Include="inc\timing.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
