--- a/software/sensors-and-motors/lib-utils/lib-utils.vcxproj
+++ b/software/sensors-and-motors/lib-utils/lib-utils.vcxproj
@@ -52,6 +52,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="inc\math_utils.h" />
     <ClInclude Include="inc\rolling_values.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
