--- a/software/sensors-and-motors/lib-utils/lib-utils.vcxproj.filters
+++ b/software/sensors-and-motors/lib-utils/lib-utils.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="inc\rolling_values.h">
       <Filter>inc</Filter>
     </ClInclude>
+    <ClInclude Include="inc\math_utils.h">
+      <Filter>inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\rolling_values.c">
