--- a/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
+++ b/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
@@ -44,14 +44,14 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-driver\inc;D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-utils\inc;D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-stm32\src;D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-stm32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;$(SolutionDir)\lib-stm32\src;$(SolutionDir)\lib-stm32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>USE_FULL_LL_DRIVER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-driver\inc;D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-utils\inc;D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-stm32\src;D:\projects.gh\robot-corral\mazebot\software\sensors-and-motors\lib-stm32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;$(SolutionDir)\lib-stm32\src;$(SolutionDir)\lib-stm32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>USE_FULL_LL_DRIVER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
