- line sensor driver will now calculate displacement (as ADC is quite fast and it is implementation specific) - added status LED code for calibrating/running/paused - added code to compute yaw delta value - moved robot code to lib-robot - added buttons handling code - changed interrupt priorities (buttons now have higher priority)

--- a/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
+++ b/software/sensors-and-motors/lib-driver/lib-driver.vcxproj
@@ -54,6 +54,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="inc\buttons.h" />
     <ClInclude Include="inc\clock.h" />
     <ClInclude Include="inc\debug.h" />
     <ClInclude Include="inc\driver.h" />
