--- a/software/sensors-and-motors/lib-robot/lib-robot.vcxproj
+++ b/software/sensors-and-motors/lib-robot/lib-robot.vcxproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{2C740AC9-C988-4102-AF56-78DA516B963B}</ProjectGuid>
+    <ProjectGuid>{BD706E3D-9B25-4B82-B1A1-E9391F2CA4EF}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
     <BSP_VERSION>2018.08</BSP_VERSION>
     <InPlaceBSPSubdir />
@@ -34,33 +34,40 @@
     <GNUConfigurationType>Debug</GNUConfigurationType>
     <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
     <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
+    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
-    <ToolchainID>c2599f8d-f601-4e3d-9041-1d5828a28edd</ToolchainID>
-    <ToolchainVersion>7.3.1/(GNU/r0</ToolchainVersion>
+    <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
+    <ToolchainVersion>7.2.0/8.0.1/r3</ToolchainVersion>
+    <GNUTargetType>StaticLibrary</GNUTargetType>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-robot\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\inc;$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-robot\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\inc;$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.c" />
+    <ClInclude Include="inc\robot.h" />
+    <ClInclude Include="src\global_data.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="main-robot-Debug.vgdbsettings" />
-    <None Include="main-robot-Release.vgdbsettings" />
+    <None Include="lib-robot-Debug.vgdbsettings" />
+    <None Include="lib-robot-Release.vgdbsettings" />
     <None Include="stm32.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\global_data.c" />
+    <ClCompile Include="src\robot.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
@@ -68,9 +75,6 @@
     </ProjectReference>
     <ProjectReference Include="..\lib-driver\lib-driver.vcxproj">
       <Project>{dbeba908-c4b2-43fb-833b-aa39c9f860be}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-robot\lib-robot.vcxproj">
-      <Project>{bd706e3d-9b25-4b82-b1a1-e9391f2ca4ef}</Project>
     </ProjectReference>
     <ProjectReference Include="..\lib-stm32\lib-stm32.vcxproj">
       <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
