- renamed stm32 project to stm32l4

--- a/software/sensors-and-motors/lib-stm32l4/lib-stm32l4.vcxproj
+++ b/software/sensors-and-motors/lib-stm32l4/lib-stm32l4.vcxproj
@@ -57,8 +57,8 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="lib-stm32-Debug.vgdbsettings" />
-    <None Include="lib-stm32-Release.vgdbsettings" />
+    <None Include="lib-stm32l4-Debug.vgdbsettings" />
+    <None Include="lib-stm32l4-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
