--- a/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
+++ b/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
@@ -44,14 +44,14 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;$(SolutionDir)\lib-stm32\src;$(SolutionDir)\lib-stm32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;$(SolutionDir)\lib-stm32l4\src;$(SolutionDir)\lib-stm32l4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>USE_FULL_LL_DRIVER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;$(SolutionDir)\lib-stm32\src;$(SolutionDir)\lib-stm32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\lib-driver\inc;$(SolutionDir)\lib-utils\inc;$(SolutionDir)\lib-stm32l4\src;$(SolutionDir)\lib-stm32l4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>USE_FULL_LL_DRIVER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -91,7 +91,7 @@
     <ClInclude Include="src\usart.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\lib-stm32\lib-stm32.vcxproj">
+    <ProjectReference Include="..\lib-stm32l4\lib-stm32l4.vcxproj">
       <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
     </ProjectReference>
     <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
