--- a/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
+++ b/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
@@ -91,7 +91,7 @@
     <ClInclude Include="src\usart.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\lib-stm32l4\lib-stm32l4.vcxproj">
+    <ProjectReference Include="..\..\common\lib-stm32l4\lib-stm32l4.vcxproj">
       <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
     </ProjectReference>
     <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
