--- a/software/sensors-and-motors/main-robot/main-robot.vcxproj
+++ b/software/sensors-and-motors/main-robot/main-robot.vcxproj
@@ -63,6 +63,9 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\common\lib-stm32l4\lib-stm32l4.vcxproj">
+      <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
       <Project>{388f4433-00a8-4f05-9375-18a1ce980fbe}</Project>
     </ProjectReference>
@@ -71,9 +74,6 @@
     </ProjectReference>
     <ProjectReference Include="..\lib-robot\lib-robot.vcxproj">
       <Project>{bd706e3d-9b25-4b82-b1a1-e9391f2ca4ef}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-stm32l4\lib-stm32l4.vcxproj">
-      <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
     </ProjectReference>
     <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
       <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
