--- a/software/sensors-and-motors/test-utils/test-utils.vcxproj
+++ b/software/sensors-and-motors/test-utils/test-utils.vcxproj
@@ -64,14 +64,14 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
-      <Project>{388f4433-00a8-4f05-9375-18a1ce980fbe}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\lib-stm32l4\lib-stm32l4.vcxproj">
+    <ProjectReference Include="..\..\common\lib-stm32l4\lib-stm32l4.vcxproj">
       <Project>{0bd90c29-1fe5-4f60-b90d-250ea8217c84}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\lib-test\lib-test.vcxproj">
+    <ProjectReference Include="..\..\common\lib-test\lib-test.vcxproj">
       <Project>{c5dd5c38-ee4f-4736-86ac-ab980d90cbb2}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\lib-driver-stm32l496ze\lib-driver-stm32l496ze.vcxproj">
+      <Project>{388f4433-00a8-4f05-9375-18a1ce980fbe}</Project>
     </ProjectReference>
     <ProjectReference Include="..\lib-utils\lib-utils.vcxproj">
       <Project>{aa910249-4820-4f9b-b6bb-f2859e96845a}</Project>
