- added SDMMC headers for STM32L4 - added SD resources to resources map - added code to power up and detect SD card type (SDHC or SDSC) - lowered task timer priority

--- a/software/common/lib-stm32l4/lib-stm32l4.vcxproj.filters
+++ b/software/common/lib-stm32l4/lib-stm32l4.vcxproj.filters
@@ -26,9 +26,6 @@
     <ClInclude Include="src\stm32l4xx.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\stm32l496xx.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="src\system_stm32l4xx.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -72,6 +69,12 @@
       <Filter>stm32</Filter>
     </ClInclude>
     <ClInclude Include="stm32\stm32l4xx_ll_adc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
+    <ClInclude Include="stm32\stm32l4xx_ll_sdmmc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
+    <ClInclude Include="stm32\stm32l496xx.h">
       <Filter>stm32</Filter>
     </ClInclude>
   </ItemGroup>
