--- a/software/common/lib-stm32l4/lib-stm32l4.vcxproj
+++ b/software/common/lib-stm32l4/lib-stm32l4.vcxproj
@@ -62,9 +62,9 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\stm32l496xx.h" />
     <ClInclude Include="src\stm32l4xx.h" />
     <ClInclude Include="src\system_stm32l4xx.h" />
+    <ClInclude Include="stm32\stm32l496xx.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_adc.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_bus.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_dma.h" />
@@ -74,6 +74,7 @@
     <ClInclude Include="stm32\stm32l4xx_ll_lpuart.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_pwr.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_rcc.h" />
+    <ClInclude Include="stm32\stm32l4xx_ll_sdmmc.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_spi.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_system.h" />
     <ClInclude Include="stm32\stm32l4xx_ll_tim.h" />
