--- a/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
+++ b/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="src\gpio.c" />
     <ClCompile Include="src\imu_lsm6ds3h.c" />
     <ClCompile Include="src\motor_controller_mc33926.c" />
+    <ClCompile Include="src\sd.c" />
     <ClCompile Include="src\spi.c" />
     <ClCompile Include="src\status.c" />
     <ClCompile Include="src\system_clock.c" />
@@ -85,6 +86,7 @@
     <ClInclude Include="src\gpio.h" />
     <ClInclude Include="src\imu_lsm6ds3h.h" />
     <ClInclude Include="src\motor_controller_mc33926.h" />
+    <ClInclude Include="src\sd.h" />
     <ClInclude Include="src\spi.h" />
     <ClInclude Include="src\system_clock.h" />
     <ClInclude Include="src\timers.h" />
