- added sd read blocks function (working) - moved all SD related state into 1 structure (should do similar for other devices) - fixed resources.xlsx file to properly show rev 1.1 resource usage (DMAs, DMAs priorities)

--- a/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
+++ b/software/sensors-and-motors/lib-driver-stm32l496ze/lib-driver-stm32l496ze.vcxproj
@@ -63,7 +63,7 @@
     <ClCompile Include="src\gpio.c" />
     <ClCompile Include="src\imu_lsm6ds3h.c" />
     <ClCompile Include="src\motor_controller_mc33926.c" />
-    <ClCompile Include="src\sd.c" />
+    <ClCompile Include="src\sd_impl.c" />
     <ClCompile Include="src\spi.c" />
     <ClCompile Include="src\status.c" />
     <ClCompile Include="src\system_clock.c" />
@@ -86,7 +86,7 @@
     <ClInclude Include="src\gpio.h" />
     <ClInclude Include="src\imu_lsm6ds3h.h" />
     <ClInclude Include="src\motor_controller_mc33926.h" />
-    <ClInclude Include="src\sd.h" />
+    <ClInclude Include="src\sd_impl.h" />
     <ClInclude Include="src\spi.h" />
     <ClInclude Include="src\system_clock.h" />
     <ClInclude Include="src\timers.h" />
