--- a/software/common/lib-stm32l4/lib-stm32l496ze/lib-stm32l496ze.vcxproj
+++ b/software/common/lib-stm32l4/lib-stm32l496ze/lib-stm32l496ze.vcxproj
@@ -57,33 +57,33 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <None Include="lib-stm32l4-Debug.vgdbsettings" />
-    <None Include="lib-stm32l4-Release.vgdbsettings" />
+    <None Include="lib-stm32l496ze-Debug.vgdbsettings" />
+    <None Include="lib-stm32l496ze-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\stm32l4xx.h" />
-    <ClInclude Include="src\system_stm32l4xx.h" />
-    <ClInclude Include="stm32\stm32l496xx.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_adc.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_bus.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_dma.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_exti.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_gpio.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_lptim.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_lpuart.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_pwr.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_rcc.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_sdmmc.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_spi.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_system.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_tim.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_usart.h" />
-    <ClInclude Include="stm32\stm32l4xx_ll_utils.h" />
+    <ClInclude Include="..\src\stm32l4xx.h" />
+    <ClInclude Include="..\src\system_stm32l4xx.h" />
+    <ClInclude Include="..\stm32\stm32l496xx.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_adc.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_bus.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_dma.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_exti.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_gpio.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_lptim.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_lpuart.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_pwr.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_rcc.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_sdmmc.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_spi.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_system.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_tim.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_usart.h" />
+    <ClInclude Include="..\stm32\stm32l4xx_ll_utils.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\startup_stm32l496xx.s" />
-    <ClCompile Include="src\stm32l4xx_ll_utils.c" />
-    <ClCompile Include="src\system_stm32l4xx.c" />
+    <ClCompile Include="..\src\startup_stm32l496xx.s" />
+    <ClCompile Include="..\src\stm32l4xx_ll_utils.c" />
+    <ClCompile Include="..\src\system_stm32l4xx.c" />
   </ItemGroup>
 </Project>
