- added some missing files to stm32l1 and l4 projects - fixed clocks configuration in line sensor - added code to test usart3

--- a/software/common/lib-stm32l1/lib-stm32l151ze/lib-stm32l151ze.vcxproj
+++ b/software/common/lib-stm32l1/lib-stm32l151ze/lib-stm32l151ze.vcxproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <ClInclude Include="..\src\stm32l1xx.h" />
     <ClInclude Include="..\src\system_stm32l1xx.h" />
+    <ClInclude Include="..\stm32\stm32l151xe.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_adc.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_bus.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_cortex.h" />
