--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -60,10 +60,6 @@
   <ItemGroup>
     <ClInclude Include="..\inc\det_os.h" />
     <ClInclude Include="..\inc\det_os_implementation.h" />
-    <ClInclude Include="..\src\global_data.h" />
-    <ClInclude Include="..\src\schedule_task.h" />
-    <ClInclude Include="..\src\system_call.h" />
-    <ClInclude Include="..\src\types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
@@ -74,10 +70,8 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\stubs.c" />
-    <ClCompile Include="..\src\global_data.c" />
     <ClCompile Include="..\src\schedule_task.c" />
+    <ClCompile Include="..\src\schedule_task_svc.s" />
     <ClCompile Include="..\src\svc_handler.s" />
-    <ClCompile Include="..\src\system_call.c" />
   </ItemGroup>
 </Project>
