--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj.filters
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj.filters
@@ -1,19 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\src\global_data.c">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\schedule_task.c">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\stubs.c">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\svc_handler.s">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\system_call.c">
+    <ClCompile Include="..\src\schedule_task_svc.s">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\schedule_task.c">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -23,18 +17,6 @@
     </ClInclude>
     <ClInclude Include="..\inc\det_os_implementation.h">
       <Filter>inc</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\global_data.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\schedule_task.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\system_call.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\types.h">
-      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
