--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -72,11 +72,12 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src-asm\execute_task.s" />
+    <ClCompile Include="..\src-asm\schedule_task_svc.s" />
+    <ClCompile Include="..\src-asm\svc_handler.s" />
+    <ClCompile Include="..\src-asm\task_scheduler_timer_callback.s" />
     <ClCompile Include="..\src\det_os_implementation.c" />
-    <ClCompile Include="..\src\execute_task.s" />
     <ClCompile Include="..\src\global_data.c" />
     <ClCompile Include="..\src\schedule_task.c" />
-    <ClCompile Include="..\src\schedule_task_svc.s" />
-    <ClCompile Include="..\src\svc_handler.s" />
   </ItemGroup>
 </Project>
