- changed the way 1st task is started to avoid race conditions

--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj
@@ -61,6 +61,7 @@
     <ClInclude Include="..\inc\det_os.h" />
     <ClInclude Include="..\inc\det_os_implementation.h" />
     <ClInclude Include="..\src\global_data.h" />
+    <ClInclude Include="..\src\schedule_tasks.h" />
     <ClInclude Include="..\src\types.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
@@ -72,12 +73,13 @@
     <None Include="stm32.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src-asm\execute_task.s" />
+    <ClCompile Include="..\src-asm\execute_tasks.s" />
     <ClCompile Include="..\src-asm\schedule_task_svc.s" />
+    <ClCompile Include="..\src-asm\stark_new_task.s" />
     <ClCompile Include="..\src-asm\svc_handler.s" />
     <ClCompile Include="..\src-asm\task_scheduler_timer_callback.s" />
     <ClCompile Include="..\src\det_os_implementation.c" />
     <ClCompile Include="..\src\global_data.c" />
-    <ClCompile Include="..\src\schedule_task.c" />
+    <ClCompile Include="..\src\schedule_tasks.c" />
   </ItemGroup>
 </Project>
