--- a/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj.filters
+++ b/software/common/lib-det-os/lib-stm32l496ze/lib-det-os-stm32l496ze.vcxproj.filters
@@ -1,17 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\src\schedule_task.c">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\det_os_implementation.c">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\global_data.c">
       <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src-asm\execute_task.s">
-      <Filter>src-asm</Filter>
     </ClCompile>
     <ClCompile Include="..\src-asm\schedule_task_svc.s">
       <Filter>src-asm</Filter>
@@ -20,6 +14,15 @@
       <Filter>src-asm</Filter>
     </ClCompile>
     <ClCompile Include="..\src-asm\task_scheduler_timer_callback.s">
+      <Filter>src-asm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src-asm\execute_tasks.s">
+      <Filter>src-asm</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\schedule_tasks.c">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src-asm\stark_new_task.s">
       <Filter>src-asm</Filter>
     </ClCompile>
   </ItemGroup>
@@ -34,6 +37,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\global_data.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\schedule_tasks.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
